a bunch of quality of life improvements, malloc and free

--- a/JC/Makefile
+++ b/JC/Makefile
@@ -1,4 +1,5 @@
 
 
 r:
-	nasm -f elf64 out.asm && ld out.o -o main && ./main && echo $?
+	nasm -f elf64 out.asm && ld  --dynamic-linker=/lib64/ld-linux-x86-64.so.2 out.o -o main -lc  && ./main && echo $?
+
